--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     user-select: none;
     font-family: "Open Sans", sans-serif;
     touch-action: manipulation;
-    font-size: 16px;
+    font-size: 1.3em;
 }
 
 input,
@@ -40,7 +40,7 @@ select {
 
 .roundTimerInput,
 .gameLengthInput {
-    width: 193px;
+    width: 243px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -69,7 +69,8 @@ select {
     margin-left: auto;
     margin-right: auto;
     text-align: justify;
-    margin-top: 20%;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 #timerContainer {
