--- a/style.css
+++ b/style.css
@@ -17,8 +17,11 @@ select {
 #logo {
     font-size: 48pt;
     font-family: "Comfortaa", sans-serif;
-    width: 100%;
-    text-align: center;
+    width: 90%;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     margin-top: 10%;
     margin-bottom: 40px;
 }
