--- a/sliderControl.css
+++ b/sliderControl.css
@@ -32,7 +32,7 @@
 }
 
 .upButton {
-    background-color: #3d88d8;
+    background-color: #368ddd;
     padding: 10px 15px 10px 15px;
     border-radius: 4px;
 }
