Moves buttons round

--- a/sliderControl.css
+++ b/sliderControl.css
@@ -1,9 +1,9 @@
 .inputControlPanel {
     margin-left: auto;
     margin-right: auto;
-    width: 180px;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 20px;
+    display: table;
 }
 #gameInputPreview {
     font-size: 1.3em;
@@ -20,12 +20,10 @@
     display: inline-block;
     margin-left: 10px;
     margin-right: 10px;
-
     font-weight: 600;
 }
 
 .downButton {
-    margin-left: 10px;
     background-color: #f26b5a;
     padding: 10px 15px 10px 15px;
     border-radius: 4px;
