--- a/sliderControl.css
+++ b/sliderControl.css
@@ -11,7 +11,9 @@
     display: inline-block;
     margin-left: 10px;
     margin-right: 10px;
+    margin-top: 2px;
     font-weight: 600;
+    vertical-align: middle;
 }
 
 #roundInputPreview {
@@ -20,6 +22,8 @@
     display: inline-block;
     margin-left: 10px;
     margin-right: 10px;
+    vertical-align: middle;
+    margin-top: 2px;
     font-weight: 600;
 }
 
@@ -27,10 +31,12 @@
     background-color: #f26b5a;
     padding: 10px 15px 10px 15px;
     border-radius: 4px;
+    font-weight: 600;
 }
 
 .upButton {
     background-color: #368ddd;
     padding: 10px 15px 10px 15px;
     border-radius: 4px;
+    font-weight: 600;
 }
