--- a/style/style.css
+++ b/style/style.css
@@ -66,14 +66,17 @@ select {
     margin-top: 20px;
 }
 
+#introScreen {
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
 #introScreen > p {
     width: 80%;
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
     text-align: justify;
-    margin-top: 10%;
-    margin-bottom: 10%;
 }
 
 #timerContainer {
